--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,11 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+  "ConnectionStrings": {
+    "WebApiDatabase" : "server=localhost; database=mytestdatabase; user=root; password=Rammstein8722"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  }
 }
