--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "WebApiDatabase" : "server=localhost; database=mytestdatabase; user=root; password=Rammstein8722"
+    "WebApiDatabase" : "server=localhost; database=mytestdatabase; user=root; password=<password>"
   },
   "Logging": {
     "LogLevel": {
